<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.example.hou.tools.SlideMenu
        android:id="@+id/slide_menu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <include layout="@layout/layout_menu" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/color_2"
            android:orientation="vertical" >

            <include layout="@layout/layout_title_bar_booking" />

            <LinearLayout android:id="@+id/isShowBookingList" android:orientation="horizontal"
                android:layout_width="wrap_content" android:layout_height="wrap_content">

                <EditText android:id="@+id/showdate" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1"/>

                <Button
                    android:id="@+id/pickdate"
                    android:text="Select Date"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/TimeLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/xianshi1"
                    android:text="@string/Info1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/TimeStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/xianshi2"
                    android:text="@string/Info2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/TimeFinish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <EditText
                android:id="@+id/FIndNote"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/addNote"
                android:text="@string/addNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <ListView
                android:id="@+id/bookList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ListView>

        </LinearLayout>
    </com.example.hou.tools.SlideMenu>

</RelativeLayout>