<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_2"
    >
    <include layout="@layout/layout_title_bar_result" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView" android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:id="@+id/Detection"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:textSize="@dimen/activity_vertical_margin1"
                android:text="@string/OwnerName"
                android:textColor="@color/color_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="@dimen/activity_vertical_margin1"
                android:textColor="#ffffff"
                android:id="@+id/Name"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/Address"
            android:textSize="@dimen/activity_vertical_margin1"
            android:textColor="@color/color_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="@dimen/activity_vertical_margin1"
            android:textColor="#ffffff"
            android:id="@+id/Address"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/Email"
            android:textSize="@dimen/activity_vertical_margin1"
            android:textColor="@color/color_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="@dimen/activity_vertical_margin1"
            android:textColor="#ffffff"
            android:id="@+id/Email"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/activity_vertical_margin1"
                android:text="@string/Make"
                android:textColor="@color/color_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="@dimen/activity_vertical_margin1"
                android:textColor="#ffffff"
                android:id="@+id/Make"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/activity_vertical_margin1"
                android:text="@string/Model"
                android:textColor="@color/color_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="@dimen/activity_vertical_margin1"
                android:textColor="#ffffff"
                android:id="@+id/Model"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/activity_vertical_margin1"
                android:text="@string/MakeDate"
                android:textColor="@color/color_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="@dimen/activity_vertical_margin1"
                android:textColor="#ffffff"
                android:id="@+id/MakeDate"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/activity_vertical_margin1"
                android:text="@string/TestDate"
                android:textColor="@color/color_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textSize="@dimen/activity_vertical_margin1"
                android:textColor="#ffffff"
                android:id="@+id/TestDate"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Alignment："
                android:textSize="9pt"
                />
            <TextView
                android:id="@+id/alignment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_0"
                android:text=""
                android:textSize="9pt"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Suspension："
                android:textSize="9pt"
                />
            <TextView
                android:id="@+id/suspension"
                android:textColor="@color/color_0"
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Brakes："
                android:textSize="9pt"
                />
            <TextView
                android:textColor="@color/color_0"
                android:text=""
                android:id="@+id/brakes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Exhaust_Emission："
                android:textSize="9pt"
                />
            <TextView
                android:textColor="@color/color_0"
                android:text=""
                android:id="@+id/exhaust_Emission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Head_Lights："
                android:textSize="9pt"
                />
            <TextView
                android:textColor="@color/color_0"
                android:text=""
                android:id="@+id/head_Lights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                />
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
